# OpenTrickOrTreat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.sh
cmake/: README.md
data/animations/: candy.json  coin.json  cs_fish.json  cs_monster.json  cs_skeleton.json  cs_vampire.json  cs_witch.json  fish_mv_down.json  fish_mv_left.json  fish_mv_right.json  fish_mv_up.json  monster_mv_down.json  monster_mv_left.json  monster_mv_right.json  monster_mv_up.json  skeleton_mv_down.json  skeleton_mv_left.json  skeleton_mv_right.json  skeleton_mv_up.json  vampire_mv_down.json  vampire_mv_left.json  vampire_mv_right.json  vampire_mv_up.json  witch_mv_down.json  witch_mv_left.json  witch_mv_right.json  witch_mv_up.json
data/maps/: map_1.json
data/tilesets/: tileset_1.json
include/: Compat.h  Game.h  Util.h  Window.h
include/GahoodSON/: GahoodSON.h  parse.h
linux/: CMakeLists.txt  install.sh
src/: Game.cpp  Main.cpp  animationmanager.cpp  animationmanager.hpp  fontmanager.cpp  fontmanager.hpp  game.cpp  game.hpp  gamestate.cpp  gamestate.hpp  main.cpp  texturemanager.cpp  texturemanager.hpp  window.cpp  window.hpp
src/animation/: animation.hpp  animationmanager.cpp  animationmanager.hpp  deltaanimation.cpp  deltaanimation.hpp  movementanimation.cpp  movementanimation.hpp
src/client/: Window.cpp
src/compat/: Desktop.cpp  Vita.cpp
src/map/: consumable.hpp  interaction.hpp  map.cpp  map.hpp  properties.cpp  properties.hpp  tile.cpp  tile.hpp  tileset.cpp  tileset.hpp
src/screen/: launchscreen.cpp  launchscreen.hpp  levelscreen.cpp  levelscreen.hpp  playscreen.cpp  playscreen.hpp  screen.cpp  screen.hpp  screenmanager.cpp  screenmanager.hpp
src/sprite/: animatedmapsprite.cpp  animatedmapsprite.hpp  breakablesprite.cpp  breakablesprite.hpp  candysprite.cpp  candysprite.hpp  coinsprite.cpp  coinsprite.hpp  consumablesprite.cpp  consumablesprite.hpp  costumeselectsprite.cpp  costumeselectsprite.hpp  creaturesprite.cpp  creaturesprite.hpp  gatesprite.cpp  gatesprite.hpp  ghostsprite.cpp  ghostsprite.hpp  housesprite.cpp  housesprite.hpp  interactionsprite.cpp  interactionsprite.hpp  mapsprite.cpp  mapsprite.hpp  monstersprite.cpp  monstersprite.hpp  objectsprite.cpp  objectsprite.hpp  playersprite.cpp  playersprite.hpp  scoresprite.hpp  skeletonsprite.cpp  skeletonsprite.hpp  spellsprite.cpp  spellsprite.hpp  sprite.cpp  sprite.hpp  spritefactory.cpp  spritefactory.hpp  stairsinteractionsprite.cpp  (+13 more)
src/util/: Json.cpp  Logger.cpp  Math.cpp  Timer.cpp  const.cpp  const.hpp  timer.cpp  timer.hpp  util.cpp  util.hpp
vita/: CMakeLists.txt  install.sh  setup.sh
vita/vitabuilds/GahoodSON/: VITABUILD
vita/vitabuilds/enet/: VITABUILD
